Add batch training performance evaluation #341